Order returned users by username